<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginStart="20dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/avatar"
        app:layout_constraintBottom_toBottomOf="@+id/background"
        app:layout_constraintStart_toStartOf="@+id/background"
        app:layout_constraintTop_toBottomOf="@+id/background" />

    <TextView
        android:id="@+id/text_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="12dp"
        android:text="@string/name"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/text_position"
        app:layout_constraintStart_toStartOf="@+id/text_position"
        app:layout_constraintTop_toBottomOf="@id/background" />

    <TextView
        android:id="@+id/text_position"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="12dp"
        android:text="@string/position"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/avatar"
        app:layout_constraintEnd_toEndOf="@+id/text_biography"
        app:layout_constraintStart_toEndOf="@+id/avatar" />

    <TextView
        android:id="@+id/text_biography"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="4dp"
        android:text="@string/biography"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@id/phone_button"
        app:layout_constraintEnd_toEndOf="@+id/phone_button"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintStart_toStartOf="@+id/avatar"
        app:layout_constraintTop_toBottomOf="@id/avatar" />

    <TextView
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:text="@string/email"
        app:layout_constraintBottom_toBottomOf="@id/phone_button"
        app:layout_constraintEnd_toStartOf="@id/phone_button"
        android:clickable="true"/>

    <TextView
        android:id="@+id/phone_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="16dp"
        android:text="@string/phone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:clickable="true"/>

</androidx.constraintlayout.widget.ConstraintLayout>